Changelog v5.1.69 (2024-02-20):
- Added Anidb Episode Meta

Changelog v5.1.68 (2024-02-17):
- Added Trakt Scrobbler Settings to Watchlist

Changelog v5.1.67 (2024-02-16):
- Improved Scraping for Animetosho
- Rescrape works as intended now

Changelog v5.1.66 (2024-02-13):
- Added Votes with Ratings for Anilist

Changelog v5.1.65 (2024-02-13):
- Fixed UpNext Stuff
- Added Some Stuff to Episode Meta
- Made Anilist Calendar load faster

Changelog v5.1.64 (2024-02-13):
- Small Fix with New Playback Setting
- Added Genres to Episode Meta

Changelog v5.1.63 (2024-02-11):
- Added New Playback Setting for Playlist
- Made Mal Calendars load faster

Changelog v5.1.62 (2024-02-10):
- Added the ability to change Anilist Posters to Mal Posters

Changelog v5.1.61 (2024-02-09):
- Added Clearlogos to Episode Meta

Changelog v5.1.60 (2024-02-08):
- Fixed Small bug with Torrents
- Changed Sync Setting Default

Changelog v5.1.59 (2024-02-05):
- Fixed Autoplay for Embeds

Changelog v5.1.58 (2024-02-04):
- Fixed Gogo

Changelog v5.1.57 (2024-02-03):
- Improved Cloud Scraping
- Improved Local Scraping
- Improved Filtering

Changelog v5.1.56 (2024-02-02):
- Improved the crap out of Debrid Scraping
- Small Fix for Premiumize
- Fixed major episode meta bug
- Moved some files around

Changelog v5.1.55 (2024-02-01):
- Added Configuration for Embed Servers

Changelog v5.1.54 (2024-01-30):
- Added MP2T Support for InputStream Helper
- Fixed Gogo Backup Function
- Fixed Aniwave Streams
- Fixed Imports
- Linting

Changelog v5.1.53 (2024-01-27):
- Added New ViewType Setting

Changelog v5.1.52 (2024-01-26):
- Fix bug with Mal Calendar

Changelog v5.1.51 (2024-01-26):
- Requests are a lot faster now
- Removed Request Module
- Removed Six Module
- Fix bugs with some logins
- Fixed Clear Search History Button

Changelog v5.1.50 (2024-01-22):
- Added Paging to Animetosho

Changelog v5.1.49 (2024-01-21):
- Fixed Anilist Genres & Tags
- Fixed Smart Resolver 
- Fixed Resolving Last Source