@@ -163,7 +163,7 @@ class Sources(BrowserBase):
             'o': 'desc'
         }
         nyaa_sources += self.process_nyaa_episodes(self._BASE_URL, params, episode_zfill, season_zfill, part)
-        if status == 'FINISHED':
+        if status in ["FINISHED", "Finished Airing"]:
             query = '%s "Batch"|"Complete Series"' % show
             episodes = pickle.loads(database.get_show(mal_id)['kodi_meta'])['episodes']
             if episodes:
